--- a/assets/css/style_auth.css
+++ b/assets/css/style_auth.css
@@ -243,6 +243,11 @@ body {
   text-align: center;
   margin-top: 25px;
 }
+
+@keyframes spin {
+  0% { transform: rotate(0deg);}
+  100% { transform: rotate(360deg);}
+}
 /* Animation keyframes */
 @keyframes fadeSlideUp {
   0% {
