made some changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ body.dark {
   --text-color: #e2dcdc;
   --text-color: #e2dcdc;
   --bg-color: #121212;
-  --container-bg: #15142c;
+  --container-bg:  #e2dcdc;
   --border-color: #333;
   --accent-color: #4A90E2;
   --secondary-color: #FF6B6B;
